# SMSD

./: CMakeLists.txt  config.c  config.h  database.c  database.h  default.h  error.c  error.h  info.c  info.h  main.c  monitor.c  monitor.h  pppd.c  pppd.h  receive.c  receive.h  send.c  send.h  sms.c  sms.h  smsdconf  struct.h  ussd.c  ussd.h
cmake/: FindHiredis.cmake
